--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,76 @@
         }
       }
     },
+    "wc-list-prescriptions": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "wc-list-prescriptions",
+      "sourceRoot": "/wc-list-prescriptions/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/wc-list-prescriptions",
+            "index": "wc-list-prescriptions/src/index.html",
+            "browser": "/wc-list-prescriptions/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "wc-list-prescriptions/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "keycloak.js",
+                "input": "./node_modules/keycloak-js/dist/",
+                "output": "./"
+              }
+            ],
+            "styles": [
+              "wc-list-prescriptions/src/styles.scss"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
+                }
+              ],
+              "outputHashing": "all",
+              "optimization": {
+                "fonts": false
+              }
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "wc-list-prescriptions:build:production"
+            },
+            "development": {
+              "buildTarget": "wc-list-prescriptions:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        }
+      }
+    },
     "wc-pdfmake": {
       "projectType": "application",
       "schematics": {
