--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "npm run serve:wc:details",
     "build:wc:details": "ng build wc-evf-form-details && ng build wc-pdfmake && ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode development -c ./wc-prescription-details/vite.config.mjs",
     "serve:wc:details": "ng serve wc-prescription-details",
-    "watch": "ng build --watch --configuration development"
+    "build:wc:list": "ng build wc-list-prescriptions --configuration production --output-hashing none && vite build --mode development -c ./wc-list-prescriptions/vite.config.mjs",
+    "serve:wc:list": "ng serve wc-list-prescriptions",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +29,7 @@
     "@smals/ngx-configuration-service": "^4.1.0-SNAPSHOT.1708959592",
     "@smals/vas-evaluation-form-ui-core": "^5.0.0",
     "@smals/vas-evaluation-form-ui-material": "^5.1.2",
+    "@smals/vas-integrations-pseudojs": "^1.2.0",
     "@types/marked": "^6.0.0",
     "@types/pdfmake": "^0.2.9",
     "keycloak-angular": "^15.2.1",
@@ -40,14 +44,17 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^17.0.3",
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "concat": "^1.0.3",
     "fs-extra": "^11.2.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
