--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webcomponents",
-  "version": "0.0.0",
+  "name": "@smals/nihdi-uhmep-healix-web-components",
+  "version": "0.0.1-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:wc:details",
