Dockerfile + package.json adaptations

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:wc:details",
-    "build:wc:details": "npm run build:wc:evfdetails && npm run build:wc:pdf && ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser",
+    "build": "npm run build:wc:evfform && npm run build:wc:pdf && npm run build:wc:evfdetails && npm run build:wc:create:no-deps && npm run build:wc:list && npm run build:wc:details:no-deps",
+    "build:wc:details": "npm run build:wc:evfdetails && npm run build:wc:pdf && npm run build:wc:details:no-deps",
+    "build:wc:details:no-deps": "ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser",
     "serve:wc:details": "npm run build:wc:evfdetails && npm run build:wc:pdf && ng serve wc-prescription-details",
     "build:wc:list": "ng build wc-list-prescriptions --configuration production --output-hashing none && vite build --mode production -c ./wc-list-prescriptions/vite.config.mjs && rm -rf ./dist/wc-list-prescriptions/browser",
     "serve:wc:list": "ng serve wc-list-prescriptions",
-    "build:wc:create": "npm run build:wc:evfform && ng build wc-create-prescription --configuration production --output-hashing none && vite build --mode production -c ./wc-create-prescription/vite.config.mjs && rm -rf ./dist/wc-create-prescription/browser",
+    "build:wc:create": "npm run build:wc:evfform && ",
+    "build:wc:create:no-deps": "ng build wc-create-prescription --configuration production --output-hashing none && vite build --mode production -c ./wc-create-prescription/vite.config.mjs && rm -rf ./dist/wc-create-prescription/browser",
     "serve:wc:create": "npm run build:wc:evfform && ng serve wc-create-prescription",
     "build:wc:evfdetails": "ng build wc-evf-form-details --configuration production --output-hashing none && vite build --mode production -c ./wc-evf-form-details/vite.config.mjs",
     "build:wc:pdf": "ng build wc-pdfmake --configuration production --output-hashing none && vite build --mode production -c ./wc-pdfmake/vite.config.mjs",
