--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "pdfmake": "^0.2.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "vite": "^5.2.12",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -57,19 +56,9 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
-    "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
-    "concat": "^1.0.3",
-    "fs-extra": "^11.2.0",
-    "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2",
-    "vite-plugin-static-copy": "^1.0.5"
+    "typescript": "~5.4.2"
   }
 }
