--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "npm run serve:wc:details",
     "build": "npm run build:wc:evfform && npm run build:wc:pdf && npm run build:wc:evfdetails && npm run build:wc:create:no-deps && npm run build:wc:list && npm run build:wc:details:no-deps",
     "build:wc:details": "npm run build:wc:evfdetails && npm run build:wc:pdf && npm run build:wc:details:no-deps",
-    "build:wc:details:no-deps": "ng build wc-prescription-details --configuration production",
+    "build:wc:details:no-deps": "ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser",
     "serve:wc:details": "npm run build:wc:evfdetails && npm run build:wc:pdf && ng serve wc-prescription-details",
-    "build:wc:list": "ng build wc-list-prescriptions --configuration production",
+    "build:wc:list": "ng build wc-list-prescriptions --configuration production --output-hashing none && vite build --mode production -c ./wc-list-prescriptions/vite.config.mjs && rm -rf ./dist/wc-list-prescriptions/browser",
     "serve:wc:list": "ng serve wc-list-prescriptions",
     "build:wc:create": "npm run build:wc:evfform && npm run build:wc:create:no-deps",
-    "build:wc:create:no-deps": "ng build wc-create-prescription --configuration production",
+    "build:wc:create:no-deps": "ng build wc-create-prescription --configuration production --output-hashing none && vite build --mode production -c ./wc-create-prescription/vite.config.mjs && rm -rf ./dist/wc-create-prescription/browser",
     "serve:wc:create": "npm run build:wc:evfform && ng serve wc-create-prescription",
-    "build:wc:evfdetails": "ng build wc-evf-form-details --configuration production",
-    "build:wc:pdf": "ng build wc-pdfmake --configuration production",
-    "build:wc:evfform": "ng build wc-evf-form --configuration production",
+    "build:wc:evfdetails": "ng build wc-evf-form-details --configuration production --output-hashing none && vite build --mode production -c ./wc-evf-form-details/vite.config.mjs",
+    "build:wc:pdf": "ng build wc-pdfmake --configuration production --output-hashing none && vite build --mode production -c ./wc-pdfmake/vite.config.mjs",
+    "build:wc:evfform": "ng build wc-evf-form --configuration production --output-hashing none && vite build --mode production -c ./wc-evf-form/vite.config.mjs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "postversion": "npm pack ."
@@ -50,6 +50,7 @@
     "pdfmake": "^0.2.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vite": "^5.2.12",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "jest": "^29.7.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "vite-plugin-static-copy": "^1.0.5"
   }
 }
