--- a/package.json
+++ b/package.json
@@ -63,5 +63,10 @@
     "jest": "^29.7.0",
     "typescript": "~5.4.2",
     "vite-plugin-static-copy": "^1.0.5"
-  }
+  },
+  "files": [
+    "dist/wc-create-prescription",
+    "dist/wc-list-prescriptions",
+    "dist/wc-prescription-details"
+  ]
 }
