Fixing the routes

--- a/.openshift/resource/route_int.yaml
+++ b/.openshift/resource/route_int.yaml
@@ -5,7 +5,21 @@ metadata:
     deploymentconfig: &deploymentconfig referral-prescription-web-components
   name: referral-prescription-web-components-ext
 spec:
-  host: referral-prescription.test.ext.vascloud.be
+  host: referral-prescription.int.ext.vascloud.be
+  path: /web-components
+  to:
+    kind: Service
+    name: *deploymentconfig
+    weight: 100
+---
+apiVersion: v1
+kind: Route
+metadata:
+  labels:
+    deploymentconfig: &deploymentconfig referral-prescription-web-components
+  name: referral-prescription-web-components-pub
+spec:
+  host: referral-prescription.int.pub.vascloud.be
   path: /web-components
   to:
     kind: Service
