--- a/contrib/etc/apache/conf.d/vhost.conf
+++ b/contrib/etc/apache/conf.d/vhost.conf
@@ -39,7 +39,7 @@ AddType  application/font-woff2  .woff2
 <VirtualHost *:8080>
 
     AllowEncodedSlashes On
-    DocumentRoot /opt/src/frontend/app
+    DocumentRoot /opt/src/web-components
     ServerName localhost
     ServerAlias localhost
 
