Fixing the apache configuration

--- a/contrib/etc/apache/conf.d/vhost.conf
+++ b/contrib/etc/apache/conf.d/vhost.conf
@@ -43,7 +43,7 @@ AddType  application/font-woff2  .woff2
     ServerName localhost
     ServerAlias localhost
 
-    Alias /frontend/app "/opt/src/web-components"
+    Alias /web-components "/opt/src/web-components"
 
     <Directory /opt/src/web-components>
       Options -Indexes +FollowSymLinks -Includes -ExecCGI
