--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/bn.js": "^5.1.5",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "jest": "^29.7.0",
