--- a/.openshift/resource/route_prd_up.yaml
+++ b/.openshift/resource/route_prd_up.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     deploymentconfig: &deploymentconfig referral-prescription-web-components-up
 spec:
-  host: referral-prescription.ehealth.fgov.be
+  host: www.referral-prescription.ehealth.fgov.be
   to:
     kind: Service
     name: *deploymentconfig
@@ -18,7 +18,7 @@ metadata:
   labels:
     deploymentconfig: &deploymentconfig referral-prescription-web-components-up
 spec:
-  host: referral-prescription.up.ehealth.fgov.be
+  host: www.referral-prescription.up.ehealth.fgov.be
   to:
     kind: Service
     name: *deploymentconfig
