--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@smals/ngx-configuration-service": "^4.1.0-SNAPSHOT.1708959592",
     "@smals/vas-evaluation-form-ui-core": "^5.0.0",
     "@smals/vas-evaluation-form-ui-material": "^5.1.2",
-    "@smals/vas-integrations-pseudojs": "^2.0.3-SNAPSHOT.1721830489",
+    "@smals-belgium-shared/pseudo-helper": "^1.0.0",
     "@types/marked": "^6.0.0",
     "@types/pdfmake": "^0.2.9",
     "keycloak-angular": "^15.2.1",
