Added documentation to the dc.properties file

--- a/.openshift/resource/dc.properties
+++ b/.openshift/resource/dc.properties
@@ -1,2 +1,4 @@
+# Documentation : https://ejdss-knowledge-base.gcloud.belgium.be/howto-articles/customizing-a-deployment-config-depending-on-the-environment/
+
 tst.replicas=1
 int.replicas=1
