--- a/contrib/etc/apache/conf.d/vhost.conf
+++ b/contrib/etc/apache/conf.d/vhost.conf
@@ -45,6 +45,13 @@ AddType  application/font-woff2  .woff2
 
     Alias /web-components "/opt/src/web-components"
 
+    <IfModule mod_headers.c>
+        Header always set Access-Control-Allow-Origin "*"
+        Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
+        Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+        Header always set Access-Control-Max-Age "3600"
+    </IfModule>
+
     <Directory /opt/src/web-components>
       Options -Indexes +FollowSymLinks -Includes -ExecCGI
       AllowOverride All
