--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pdfmake": "^0.2.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "vite": "^5.2.12",
     "vite-plugin-node-polyfills": "^0.22.0",
     "zone.js": "~0.14.3"
