--- a/.openshift/resource/route_prd_in.yaml
+++ b/.openshift/resource/route_prd_in.yaml
@@ -1,4 +1,8 @@
-# Public route on the lb
+# ======================================= #
+# Route configuration for the pro web app #
+# --------------------------------------- #
+#       Public API route on the lb        #
+# ======================================= #
 apiVersion: v1
 kind: Route
 metadata:
@@ -6,22 +10,56 @@ metadata:
   labels:
     deploymentconfig: &deploymentconfig referral-prescription-web-components-in
 spec:
-  host: referral-prescription.ehealth.fgov.be
+  host: www.referral-prescription.ehealth.fgov.be
   path: /web-components
   to:
     kind: Service
     name: *deploymentconfig
     weight: 100
 ---
-# Public route on in AZ
+#       Public route on availability zone 'IN'        #
 apiVersion: v1
 kind: Route
 metadata:
   name: referral-prescription-web-components-in-public
   labels:
-    deploymentconfig: &deploymentconfig referral-prescription-web-components-in
+    deploymentconfig: *deploymentconfig
 spec:
-  host: referral-prescription.in.ehealth.fgov.be
+  host: www.referral-prescription.in.ehealth.fgov.be
+  path: /web-components
+  to:
+    kind: Service
+    name: *deploymentconfig
+    weight: 100
+---
+# =========================================== #
+# Route configuration for the patient web app #
+# ------------------------------------------- #
+#         Public API route on the lb          #
+# =========================================== #
+apiVersion: v1
+kind: Route
+metadata:
+  labels:
+    deploymentconfig: *deploymentconfig
+  name: referral-prescription-patient-web-components-lb-public
+spec:
+  host: www.referral-prescription-patient.ehealth.fgov.be
+  path: /web-components
+  to:
+    kind: Service
+    name: *deploymentconfig
+    weight: 100
+---
+#       Public route on availability zone 'IN'
+apiVersion: v1
+kind: Route
+metadata:
+  labels:
+    deploymentconfig: *deploymentconfig
+  name: referral-prescription-patient-web-components-in-public
+spec:
+  host: www.referral-prescription-patient.in.ehealth.fgov.be
   path: /web-components
   to:
     kind: Service
