--- a/.openshift/resource/route_prd_in.yaml
+++ b/.openshift/resource/route_prd_in.yaml
@@ -23,7 +23,7 @@ kind: Route
 metadata:
   name: referral-prescription-web-components-in-public
   labels:
-    deploymentconfig: *deploymentconfig
+    deploymentconfig: &deploymentconfig referral-prescription-web-components-up
 spec:
   host: www.referral-prescription.in.ehealth.fgov.be
   path: /web-components
