UHMEP-1712 : adding the external route to be able to use HTTPS in test

--- a/.openshift/resource/route_tst.yaml
+++ b/.openshift/resource/route_tst.yaml
@@ -5,7 +5,7 @@ metadata:
     deploymentconfig: &deploymentconfig referral-prescription-web-components
   name: referral-prescription-web-components
 spec:
-  host: referral-prescription.test.paas.vasdc.be
+  host: referral-prescription.test.ext.vascloud.be
   path: /web-components
   to:
     kind: Service
