Adaptation for the Apache configuration not to cache the web components

--- a/contrib/etc/apache/conf.d/vhost.conf
+++ b/contrib/etc/apache/conf.d/vhost.conf
@@ -53,6 +53,9 @@ AddType  application/font-woff2  .woff2
     </IfModule>
 
     <Directory /opt/src/web-components>
+      Header set Cache-Control "no-store, no-cache, must-revalidate, max-age=0"
+      Header set Pragma "no-cache"
+      Header set Expires "Thu, 01 Jan 1970 00:00:00 GMT"
       Options -Indexes +FollowSymLinks -Includes -ExecCGI
       AllowOverride All
       Require all granted
