--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "watch": "ng build --watch --configuration development",
     "test:wc:reuse": "ng test reuse",
     "test:wc:details": "ng test wc-prescription-details",
-    "test": "npm run test:wc:details && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
-    "merge:coverage": "npx istanbul-merge --out coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json",
+    "test:wc:create": "ng test wc-create-prescription",
+    "test:wc:list": "ng test wc-list-prescriptions",
+    "test": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse",
+    "test:coverage": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
+    "merge:coverage": "npx istanbul-merge --out coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-create-prescription/coverage/coverage-final.json ./wc-list-prescriptions/coverage/coverage-final.json",
     "merge:report": "npx istanbul report --include coverage.json --dir coverage html",
     "preversion": "rm -rf ./dist",
     "version": "npm run build",
@@ -45,6 +48,7 @@
     "@smals/ngx-configuration-service": "^4.1.0-SNAPSHOT.1708959592",
     "@smals/vas-evaluation-form-ui-core": "^5.0.0",
     "@smals/vas-evaluation-form-ui-material": "^5.1.2",
+    "@testing-library/dom": "^10.4.0",
     "@types/marked": "^6.0.0",
     "@types/pdfmake": "^0.2.9",
     "keycloak-angular": "^15.2.1",
@@ -75,6 +79,7 @@
     "jest-preset-angular": "^14.2.4",
     "jose": "^5.9.3",
     "nyc": "^17.1.0",
+    "ts-jest": "^29.2.6",
     "typescript": "~5.4.2",
     "vite-plugin-static-copy": "^1.0.5"
   },
