--- a/angular.json
+++ b/angular.json
@@ -174,6 +174,23 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular-builders/jest:run",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "configPath": "jest.config.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": [
+              "scss"
+            ],
+            "assets": [],
+            "styles": [],
+            "scripts": []
+          }
         }
       }
     },
@@ -204,7 +221,7 @@
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "wc-create-prescription/tsconfig.lib.json",
+            "tsConfig": "wc-create-prescription/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "outputHashing": "all",
             "optimization": {
@@ -254,6 +271,23 @@
             }
           },
           "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-builders/jest:run",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "configPath": "jest.config.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": [
+              "scss"
+            ],
+            "assets": [],
+            "styles": [],
+            "scripts": []
+          }
         }
       }
     },
@@ -283,7 +317,12 @@
               "wc-pdfmake/src/favicon.ico",
               "wc-pdfmake/src/assets"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "localforage",
+              "pdfmake/build/pdfmake.js",
+              "@messageformat/core"
+            ]
           },
           "configurations": {
             "production": {
