--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "extends": "./tsconfig.paths.json"
 }
