--- a/wc-create-prescription/tsconfig.app.json
+++ b/wc-create-prescription/tsconfig.app.json
@@ -7,8 +7,7 @@
     "resolveJsonModule": true
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
