--- a/wc-list-prescriptions/tsconfig.spec.json
+++ b/wc-list-prescriptions/tsconfig.spec.json
@@ -4,12 +4,12 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "types": [
-      "jest"
-    ]
+      "jest",
+      "node"
+    ],
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["../node_modules/@types", "../node_modules/@types/node"]
   },
-  "files": [
-    "src/polyfills.ts"
-  ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
