--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-prescription-details",
             "index": "wc-prescription-details/src/index.html",
@@ -46,6 +46,12 @@
             "externalDependencies": [
               "/assets/evf-form-details/evf-form-details.js",
               "/assets/pdfmake/pdfmake.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "@messageformat/core",
+              "elliptic",
+              "bn.js"
             ]
           },
           "configurations": {
@@ -72,7 +78,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "wc-prescription-details:build:production"
@@ -114,7 +120,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-list-prescriptions",
             "index": "wc-list-prescriptions/src/index.html",
@@ -127,6 +133,12 @@
             "assets": [],
             "styles": [
               "wc-list-prescriptions/src/styles.scss"
+            ],
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "@messageformat/core",
+              "elliptic",
+              "bn.js"
             ]
           },
           "configurations": {
@@ -153,7 +165,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "wc-list-prescriptions:build:production"
@@ -190,7 +202,7 @@
       "prefix": "healix",
       "architect": {
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "wc-create-prescription:build:production"
@@ -202,7 +214,7 @@
           "defaultConfiguration": "development"
         },
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-create-prescription",
             "index": "wc-create-prescription/src/index.html",
@@ -231,6 +243,12 @@
             ],
             "externalDependencies": [
               "/assets/evf-form/evf-form.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "@messageformat/core",
+              "elliptic",
+              "bn.js"
             ]
           },
           "configurations": {
@@ -239,7 +257,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "1mb",
-                  "maximumError": "2mb"
+                  "maximumError": "3mb"
                 }
               ],
               "outputHashing": "all",
@@ -287,7 +305,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-pdfmake",
             "index": "wc-pdfmake/src/index.html",
@@ -347,7 +365,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-evf-form-details",
             "index": "wc-evf-form-details/src/index.html",
@@ -380,7 +398,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "wc-evf-form-details:build:production"
@@ -405,7 +423,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/wc-evf-form",
             "index": "wc-evf-form/src/index.html",
@@ -441,7 +459,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "wc-evf-form:build:production"
