--- a/wc-pdfmake/tsconfig.spec.json
+++ b/wc-pdfmake/tsconfig.spec.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "types": [
-      "jest"
+      "jest",
+      "node"
     ]
   },
   "files": [
