--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "test:coverage": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
     "merge:coverage": "npx istanbul-merge --out coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-create-prescription/coverage/coverage-final.json ./wc-list-prescriptions/coverage/coverage-final.json",
     "merge:report": "npx istanbul report --include coverage.json --dir coverage html",
+    "lint": "ng lint",
     "preversion": "rm -rf ./dist",
     "version": "npm run build",
-    "postversion": "npm pack ."
+    "postversion": "npm pack .",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -65,12 +67,21 @@
   },
   "devDependencies": {
     "@angular-builders/jest": "^19.0.0",
+    "@angular-eslint/builder": "19.4.0",
+    "@angular-eslint/eslint-plugin": "19.4.0",
+    "@angular-eslint/eslint-plugin-template": "19.4.0",
+    "@angular-eslint/schematics": "19.4.0",
+    "@angular-eslint/template-parser": "19.4.0",
     "@angular/build": "^19.2.3",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.2",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.5.5",
+    "@typescript-eslint/eslint-plugin": "8.32.1",
+    "@typescript-eslint/parser": "8.32.1",
+    "angular-eslint": "^19.4.0",
+    "eslint": "8.57.0",
     "istanbul": "^0.4.5",
     "istanbul-merge": "^2.0.0",
     "jest": "^29.7.0",
